# quantfolio-engine

./: .env.example  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
docs/: README.md  mkdocs.yml
docs/docs/: getting-started.md  index.md  results.md
docs/docs/advanced/: factor-timing.md
docs/docs/development/: contributing.md
docs/docs/tutorials/: backtesting.md  quick-start.md
docs/docs/user-guide/: cli-reference.md  configuration.md  installation.md
notebooks/: 00_optimization_testing.ipynb  01_black_litterman_testing.ipynb  02_clean_optimization_testing.ipynb  03_comparing.ipynb
notebooks/data/processed/: factor_exposures.csv  factor_regimes_hmm.csv  macro_monthly.csv  returns_monthly.csv  sentiment_monthly.csv
notebooks/reports/: optimal_weights.csv  optimization_summary.txt
quantfolio_engine/: __init__.py  cli.py  config.py  dataset.py  features.py  plots.py
quantfolio_engine/attribution/: __init__.py
quantfolio_engine/backtesting/: __init__.py  data_validator.py  walk_forward.py
quantfolio_engine/dashboard/: __init__.py
quantfolio_engine/data/: __init__.py  data_loader.py
quantfolio_engine/modeling/: predict.py  train.py
quantfolio_engine/optimizer/: __init__.py  black_litterman.py  monte_carlo.py  portfolio_engine.py
quantfolio_engine/signals/: __init__.py  factor_timing.py
quantfolio_engine/utils/: __init__.py
reports/: backtest_metrics.json  backtest_performance.csv  backtest_summary.txt  backtest_weights.csv  efficient_frontier.csv  frontier_weights.csv  optimal_weights.csv  optimization_summary.txt
reports/test_run/: optimal_weights.csv  optimization_summary.txt
reports/wf_side_by_side/: backtest_metrics.json  backtest_performance.csv  backtest_summary.txt  backtest_weights.csv
reports/wf_side_by_side_fixed/: backtest_metrics.json  backtest_performance.csv  backtest_summary.txt
tests/: test_backtesting.py  test_bl_core.py  test_data.py  test_data_loader.py  test_factor_timing.py  test_portfolio_optimization.py
