[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "quantfolio_engine"
version = "0.1.0"
description = "Smart portfolio construction using factor timing and multi-source signal integration"
authors = [
  { name = "Shivam Tyagi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    # Core data science
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",

    # Optimization
    "cvxpy>=1.3.0",

    # Data sources
    "yfinance>=0.2.0",
    "fredapi>=0.5.0",
    "requests>=2.31.0",

    # Visualization
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "seaborn>=0.12.0",
    "streamlit>=1.25.0",

    # Development tools
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "ipython>=8.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",

    # Utilities
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",

    # Optional quantitative finance
    "empyrical>=0.5.0",
    "alphalens>=0.4.0",
    "pyfolio>=0.9.2",
    "hmmlearn>=0.3.3",
    "ecos==2.0.14"
]
requires-python = ">=3.11"

[project.scripts]
quantfolio = "quantfolio_engine.cli:app"

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "black[jupyter]>=23.0.0",
    "pre-commit>=3.3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.22.0",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.env
  | data/
  | models/
  | logs/
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["quantfolio_engine"]
force_sort_within_sections = true
line_length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=quantfolio_engine",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
